@startuml
'===========================
'Plant UML Configuration
'============================
' UML Diagram layout
skinparam linetype ortho
skinparam ranksep 40
skinparam nodesep 35
left to right direction

' UML Dark mode config 
skinparam backgroundColor #1e1e1e
skinparam classBackgroundColor #2d2d2d
skinparam classBorderColor #bbbbbb
skinparam classFontColor #ffffff
skinparam classAttributeFontColor #ffffff
skinparam classMethodFontColor #ffffff
skinparam ArrowColor #cccccc
skinparam shadowing false

' Style the stereotype named "record"
skinparam class<<record>> {
    FontColor #ffffff
    BorderColor #88c0ff
}
skinparam classStereotypeFontColor #ffffff
skinparam classStereotypeFontStyle bold

' Package font color
skinparam packageFontColor #ffffff
skinparam packageBorderColor #bbbbbb
skinparam packageBackgroundColor #262626
skinparam packageTitleFontStyle bold


'=======================================
'Classes & Interfaces - Domain
'=======================================

'I. Tea + Repository Interface + Classes
'=======================================
package Inventory{
class TeaItem <<record>> {
- name: string {readOnly}
- basePrice: decimal {readOnly}
- starRating: int {readOnly}
+ Getters()
}

class TeaCatalog{
- catalog: IReadOnly List<TeaItem>
}

class RepositoryItem{
- shopItem: TeaItem
- quantity: int
- retailPrice: decimal
- itemID: int
+ DecrementStock(): void
+ IncrementStock(): void
+ IsInStock(): bool
+ SetPrice(decimal: price): void
}

class RequestedItem{
- name: string
- rating: int
- price: decimal
- iD: int
+ Getters()
+ Setters()
}

interface IRepository{
+ GetInventory(): IReadOnly List<RepositoryItem>
}

class TeaRepository {
- repositoryItems: List<RepositoryItem>
+ RemoveItem(int: itemID): void
+ AddItem(item: RepositoryItem): void
+ GetInventory(): IReadOnly List<RepositoryItem>
}
}

'II. Tea Decorator Interface + Classes
'======================================
package Decorators{
abstract class InventoryQuery {
- inner: IRepository
+ InventoryQuery(inner: IRepository)
+ GetInventory(): IReadOnly List<RepositoryItem> 
}

class TeaByName{
+ TeaByName(inner: IRepository, name: string)
+ GetInventory(): IReadOnly List<RepositoryItem>
}

class TeaByAvailability{
+ TeaByAvailability(inner: IRepository, bool: IsInStock)
+ GetInventory(): IReadOnly List<RepositoryItem>
}

class TeaByQuantity{
+ TeaByQuantity(inner: IRepository, int: quantity)
+ GetInventory(): IReadOnly List<RepositoryItem>
}

class TeaByPrice{
+ TeaByPrice(inner: IRepository, decimal: price)
+ GetInventory(): IReadOnly List<RepositoryItem>
}

class TeaByRating {
+ TeaByRating(inner: IRepository, int: rating)
+ GetInventory(): IReadOnly List<RepositoryItem>
}
 
class SortByPrice{
- direction: SortDirection
+ SortByPrice(inner: IRepository, SortDirection: direction)
+ GetInventory(): IReadOnly List<RepositoryItem>
}

class SortByRating{
- direction: SortDirection
+ SortByRating(inner: IRepository, SortDirection: direction)
+ GetInventory(): IReadOnly List<RepositoryItem>
}

enum SortDirection{
- Descending
- Ascending
}
}
 
'III. Payment Strategy Interface + Classes
'======================================
package Payment{
class OrderReceipt{
+ OrderReceipt(order: Order)
}

class Order{
- order: List<RequestedItem> 
+ OrderAmount(list: List<RequestedItem>): decimal
+ AddItem(item: RequestedItem): void
+ RemoveItem(int: RequestedItemID): void
}

interface IPaymentStrategy{
Pay(amount: decimal): void
}

class CreditCard{
Pay(amount: decimal): void
}

class ApplePay{
Pay(amount: decimal): void
}

class CryptoCurrency{
Pay(amount: decimal): void
}

class ValidateOrder{
+ ValidateOrder(order: Order)
}

class PaymentProcessor{
- strategy: IPaymentStrategy
- order: Order
+ SetStrategy(strategy: IPaymentStrategy): void
+ Checkout(): void
}
}
'IV. Classes - UI
'=======================================
package UI{
class TeaShopFacade{
- requestedItem: RequestedItem
- checkout: PaymentProcessor
- teaShopRepository: IRepository
+ PerformQuery(item: RequestedItem): IReadOnlyList<RepositoryItem>
+ DisplayQuery(): void
+ ShopOpen(): void 
}
}

'=======================================
'Relationships
'=======================================
IRepository <|.. TeaRepository
RepositoryItem <-- TeaRepository
TeaItem <-- RepositoryItem
IRepository <|.. InventoryQuery
IRepository <-- InventoryQuery
InventoryQuery <|.. TeaByAvailability
InventoryQuery <|.. TeaByQuantity
InventoryQuery <|.. TeaByPrice
InventoryQuery <|.. TeaByRating
InventoryQuery <|.. TeaByName
InventoryQuery <|.. SortByPrice
InventoryQuery <|.. SortByRating
IPaymentStrategy <|.. CreditCard
IPaymentStrategy <|.. ApplePay
IPaymentStrategy <|.. CryptoCurrency
IPaymentStrategy <-- PaymentProcessor
Order <-- PaymentProcessor
RequestedItem <-- TeaShopFacade
PaymentProcessor <-- TeaShopFacade
IRepository <-- TeaShopFacade

' Hidden Links to Force Clean UML Rendering
TeaRepository -[hidden]-> InventoryQuery
InventoryQuery -[hidden]-> PaymentProcessor

@enduml